Un poco de refactor para las estaciones por defecto.

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -13,5 +13,7 @@
 
   <div class="padding"></div>
   <i class="fa fa-refresh bottom-right" id="reload" aria-hidden="true"></i>
-    <script src="./js/radio.js"></script>
+
+  <script src="../common/js/index.js"></script>
+  <script src="./js/radio.js"></script>
 </body>
