--- a/src/options/index.html
+++ b/src/options/index.html
@@ -36,9 +36,6 @@
           <div class="form-group">
             <input type="text" class="form-control" placeholder="SRC1" id="src1" required>
           </div>
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="SRC2" id="src2" required>
-          </div>
           <button type="submit" class="btn btn-default btn-xs" id="save">Guardar</button>
         </form>
         <br>
@@ -73,6 +70,7 @@
 <script src="./js/jquery.min.js"></script>
 <script src="./js/bootstrap.min.js"></script>
 <script src="./js/bootstrap-table.min.js"></script>
+<script src="../common/js/index.js"></script>
 
 <script src="./js/options.js"></script>
 
